crates/math-core/tests/snapshots/custom_cmd_test__providecommand_existing_custom_cmd.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zz}{\\mathbb{Z}}\\providecommand{\\zz}{\\mathbb{Q}}\\zz"
---
<math>
    <mi>ℤ</mi>
</math>
