crates/math-core/tests/snapshots/custom_cmd_test__providecommand_one_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand{\\bb}[1]{\\mathbb{#1}}\\bb{C}"
---
<math>
    <mi>ℂ</mi>
</math>
