crates/math-core/tests/snapshots/custom_cmd_test__providecommand_then_newcommand.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand{\\alpha}{a}\\newcommand{\\zz}{\\mathbb{Z}}\\zz"
---
<math>
    <mi>ℤ</mi>
</math>
