crates/math-core/tests/snapshots/custom_cmd_test__providecommand_unbraced_name.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand\\half{\\frac{1}{2}}\\half"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
