crates/math-core/tests/snapshots/custom_cmd_test__providecommand_zero_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand{\\zz}{\\mathbb{Z}}x \\in \\zz"
---
<math>
    <mi>x</mi>
    <mo>∈</mo>
    <mi>ℤ</mi>
</math>
