crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_across_snippets.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\zz"
---
<math>
    <mi>ℚ</mi>
</math>
