crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_affects_earlier_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\xx}{1}\\newcommand{\\yy}{\\xx}\\renewcommand{\\xx}{2}\\yy"
---
<math>
    <mn>2</mn>
</math>
