crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_body_uses_old_definition.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zz}{\\mathbb{Z}}\\renewcommand{\\zz}{(\\zz)}\\zz"
---
<math>
    <mo stretchy="false">(</mo>
    <mi>ℤ</mi>
    <mo stretchy="false">)</mo>
</math>
