crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_body_uses_other_command.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zz}{\\mathbb{Z}}\\renewcommand{\\zz}{(\\mathbb{Z})}\\zz"
---
<math>
    <mo stretchy="false">(</mo>
    <mi>ℤ</mi>
    <mo stretchy="false">)</mo>
</math>
