crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_changes_num_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\bb}{\\mathbb{Z}}\\renewcommand{\\bb}[1]{\\mathbb{#1}}\\bb{C}"
---
<math>
    <mi>ℂ</mi>
</math>
