crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_does_not_affect_earlier_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\xx}{1}\\newcommand{\\yy}{\\xx}\\renewcommand{\\xx}{2}\\yy"
---
<math>
    <mn>1</mn>
</math>
