crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_overwrites_let.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\a\\alpha\\renewcommand{\\a}{x}\\a"
---
<math>
    <mi>x</mi>
</math>
